add modal event bubbling

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
     </section>
 
 
-    <section class="modal-wrapper flex modal-price modal__close">
+    <section class="modal-wrapper flex modal-price">
         <section class="modal modal__container">
             <button type="button" class="close modal__close" title="Close">
                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -649,7 +649,7 @@
         </section>
     </section>
 
-    <section class="modal-wrapper flex modal-lising modal__close">
+    <section class="modal-wrapper flex modal-lising">
         <section class="modal modal__container">
             <button type="button" class="close modal__close" title="Close">
                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
