add (normal?) adaptive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     под заказ 40 дней
                 </p>
             </section>
-
+<section class="request-wrapper">
             <section class="request">
                 <h3 class="h3 bold">Получить прайс-лист на действующий модельный ряд</h3>
                 <p class="request__subtitle">
@@ -53,6 +53,7 @@
                     <button type="submit" class="btn bold">Получить прайс</button>
                 </form>
             </section>
+        </section>
         </section>
     </section>
 
